[package]
name = "boa-cat"
version = "0.7.0"
edition = "2024"
description = "Tree-walking ECMAScript interpreter built on ecma-syntax-cat.  v0.7.0 bumps to ecma-parse-cat 0.3 so the async track's tests can drop their `(async function () { ... })()` IIFE workarounds and use natural `async () => body` arrow syntax + `obj.catch(cb)` dot-member access.  No engine source change: the AST variants for these forms have been handled since v0.6; this release picks up the parser support."
license = "MIT OR Apache-2.0"
keywords = ["ecmascript", "javascript", "interpreter", "boa", "type-driven"]
categories = ["development-tools", "compilers"]

[dependencies]
comp-cat-rs = "0.5"
ecma-syntax-cat = "0.1"
ecma-lex-cat = "0.1"
ecma-parse-cat = "0.3"

[dev-dependencies]
proptest = "1"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
needless_pass_by_value = "warn"
manual_map = "warn"
