[package]
name = "boa-cat"
version = "0.7.1"
edition = "2024"
description = "Tree-walking ECMAScript interpreter built on ecma-syntax-cat.  v0.7.1 promotes `expression::call_function` from `pub(crate)` to `pub` so embedder code (e.g. `web-api-cat`'s `addEventListener` / `dispatchEvent`) can invoke user-supplied JS callbacks from a `NativeFn` without duplicating the dispatch logic.  No behavior change; one-line visibility unlock."
license = "MIT OR Apache-2.0"
keywords = ["ecmascript", "javascript", "interpreter", "boa", "type-driven"]
categories = ["development-tools", "compilers"]

[dependencies]
comp-cat-rs = "0.5"
ecma-syntax-cat = "0.1"
ecma-lex-cat = "0.1"
ecma-parse-cat = "0.3"

[dev-dependencies]
proptest = "1"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
needless_pass_by_value = "warn"
manual_map = "warn"
