[package]
name = "boa-cat"
version = "0.7.2"
edition = "2024"
description = "Tree-walking ECMAScript interpreter built on ecma-syntax-cat.  v0.7.2 lands three integration tests pinning down the existing `new SomeNativeFn(args)` dispatch path: `expression::construct` allocates a fresh empty Object as `this`, hands it to `call_function`, and honours the spec's \"return the Object the constructor produced, else fall back to `this`\" semantics.  Embedders (e.g. `web-api-cat`'s `Event` / `CustomEvent` constructors) can now rely on this surface without reverse-engineering the implementation.  No source change."
license = "MIT OR Apache-2.0"
keywords = ["ecmascript", "javascript", "interpreter", "boa", "type-driven"]
categories = ["development-tools", "compilers"]

[dependencies]
comp-cat-rs = "0.5"
ecma-syntax-cat = "0.1"
ecma-lex-cat = "0.1"
ecma-parse-cat = "0.3"

[dev-dependencies]
proptest = "1"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
needless_pass_by_value = "warn"
manual_map = "warn"
